better ::before, ::after, a[href] support

--- a/rainbow.css
+++ b/rainbow.css
@@ -32,7 +32,11 @@ a[href]:hover {
 }
 
 *:root a[href]:not([data-rainbow-colour]):hover, *:root *.rainbow-link:not([data-rainbow-colour]):hover {
-    color: inherit;
+    color: #636363;
+}
+
+*:root[data-rainbow-theme="dark"] a[href]:not([data-rainbow-colour]):hover, *:root[data-rainbow-theme="dark"] *.rainbow-link:not([data-rainbow-colour]):hover {
+    color: #a3a3a3;
 }
 
 /*  BASIC COLOURING  */
@@ -392,7 +396,7 @@ a[href]:hover {
 
 /*  ::BEFORE & ::AFTER  */
 
-*:root *::before {
+*:root *::before, *:root *::after {
     color: #cccccc;
 }
 
@@ -428,7 +432,7 @@ a[href]:hover {
     color: #bdf0df;
 }
 
-*:root[data-rainbow-theme="dark"] *::before {
+*:root[data-rainbow-theme="dark"] *::before, *:root[data-rainbow-theme="dark"] *::after {
     color: #0c0c0c;
 }
 
@@ -464,67 +468,75 @@ a[href]:hover {
     color: #1c4b3b;
 }
 
-*:root *[data-rainbow-colour="cyan"]::before, *:root *[data-rainbow-colour="cyan"]::after {
+*:root *[data-rainbow-colour]::before, *:root *[data-rainbow-colour]::after {
+    color: #cccccc;
+}
+
+*:root *[data-rainbow-colour|="cyan"]::before, *:root *[data-rainbow-colour|="cyan"]::after {
     color: #bfe7f2;
 }
 
-*:root *[data-rainbow-colour="blue"]::before, *:root *[data-rainbow-colour="blue"]::after {
+*:root *[data-rainbow-colour|="blue"]::before, *:root *[data-rainbow-colour|="blue"]::after {
     color: #d0d1f6;
 }
 
-*:root *[data-rainbow-colour="purple"]::before, *:root *[data-rainbow-colour="purple"]::after {
+*:root *[data-rainbow-colour|="purple"]::before, *:root *[data-rainbow-colour|="purple"]::after {
     color: #eabdff;
 }
 
-*:root *[data-rainbow-colour="magenta"]::before, *:root *[data-rainbow-colour="magenta"]::after {
+*:root *[data-rainbow-colour|="magenta"]::before, *:root *[data-rainbow-colour|="magenta"]::after {
     color: #f0b2d8;
 }
 
-*:root *[data-rainbow-colour="red"]::before, *:root *[data-rainbow-colour="red"]::after {
+*:root *[data-rainbow-colour|="red"]::before, *:root *[data-rainbow-colour|="red"]::after {
     color: #f9a59b;
 }
 
-*:root *[data-rainbow-colour="yellow"]::before, *:root *[data-rainbow-colour="yellow"]::after {
+*:root *[data-rainbow-colour|="yellow"]::before, *:root *[data-rainbow-colour|="yellow"]::after {
     color: #fcf0be;
 }
 
-*:root *[data-rainbow-colour="green"]::before, *:root *[data-rainbow-colour="green"]::after {
+*:root *[data-rainbow-colour|="green"]::before, *:root *[data-rainbow-colour|="green"]::after {
     color: #d5fcbb;
 }
 
-*:root *[data-rainbow-colour="teal"]::before, *:root *[data-rainbow-colour="teal"]::after {
+*:root *[data-rainbow-colour|="teal"]::before, *:root *[data-rainbow-colour|="teal"]::after {
     color: #bdf0df;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="cyan"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="cyan"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour]::after {
+    color: #0c0c0c;
+}
+
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="cyan"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="cyan"]::after {
     color: #00495c;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="blue"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="blue"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="blue"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="blue"]::after {
     color: #383966;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="purple"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="purple"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="purple"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="purple"]::after {
     color: #4c3159;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="magenta"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="magenta"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="magenta"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="magenta"]::after {
     color: #592846;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="red"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="red"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="red"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="red"]::after {
     color: #5d2721;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="yellow"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="yellow"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="yellow"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="yellow"]::after {
     color: #4f420d;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="green"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="green"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="green"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="green"]::after {
     color: #1f4505;
 }
 
-*:root[data-rainbow-theme="dark"] *[data-rainbow-colour="teal"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour="teal"]::after {
+*:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="teal"]::before, *:root[data-rainbow-theme="dark"] *[data-rainbow-colour|="teal"]::after {
     color: #1c4b3b;
 }
 
